Single Page article - fixed padding on x-axis on mobile res and rate this article window growing on y-axis after clicking on more/less in labels section, About me intro added smooth scroll to learn more button,

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,10 +66,29 @@ textarea::placeholder {
 .animate-shake {
   animation: shake 0.5s;
 }
-  
-  
-  
-  
-  
+
+
+
+@keyframes inAnimation {
+  0% {
+    opacity: 0;
+    max-height: 0px;
+  }
+  100% {
+    opacity: 1;
+    max-height: 600px;
+  }
+}
+
+@keyframes outAnimation {
+  0% {
+    opacity: 1;
+    max-height: 600px;
+  }
+  100% {
+    opacity: 0;
+    max-height: 0px;
+  }
+}
 
 
